# poetry_on_aws_lambda

./: Dockerfile  lambda_function.py  pyproject.toml
src/: main.py
