[tool.poetry]
name = "lambda_with_poetry"
version = "0.1.0"
description = ""
authors = ["DitS <dits.3rd@gmail.com>"]
packages = [
    { include="src", from="." },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
myapp = "src.main:main"